--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 table, th, td {
 	padding: 5px;
-	background-color: #a7adba;
+	background-color: #483D8B;
 	border-collapse: collapse;
 	border-radius: 10px;
 }
